# test_cxx-qt

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
cpp/: main.cpp
qml/: main.qml
rust/: Cargo.toml  build.rs
rust/src/: cxxqt_object.rs  lib.rs
